# tt10-analog

./: .gitignore  Makefile  info.yaml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
docs/: info.md
gds/: digital_top.gds  tt_um_mbikovitsky_audio_player.gds
lef/: tt_um_mbikovitsky_audio_player.lef
mag/: Makefile  buffer.mag  dac.mag  digital_top.mag  sky130_fd_pr__nfet_01v8_lvt_KBNS5F.mag  sky130_fd_pr__res_high_po_0p35_3KK54B.mag  sky130_fd_pr__res_high_po_0p35_QPS5FG.mag  tt_um_mbikovitsky_audio_player.mag  tt_um_mbikovitsky_picture_frame.mag
mag/tcl/: lvs_netgen.tcl
openlane/digital_top/: config.tcl  pin_order.cfg
sim/: Makefile  mixed.cir  mixed.inc  mixed_parax.inc  mixed_tt.cir  mixed_tt_mm.cir  mixed_tt_mm_parax.cir  mixed_tt_parax.cir  test.py
src/: project.v
verilog/gl/: digital_top.v
verilog/glasgow/: pyproject.toml
verilog/glasgow/glasgowcontrib/applet/flash/: __init__.py  spi_flash.py  test.py  test_hw.py
verilog/glasgow/glasgowcontrib/applet/flash_dtr/: README.md  __init__.py  qspi_flash_dtr.py  test.py  test_hw.py
verilog/rtl/: digital_top.py  generate_verilog.py  lfsr.v  player.py  qspi_flash_dtr.py  spi_flash.py
verilog/test/: .gitignore  Makefile  Makefile.qspi  digital_top_gl_tb.v  test_digital_top.py  test_qspi_flash_dtr.py  test_spi_flash.py
xschem/: buffer.sch  buffer.sym  dac.sch  dac.sym  dac_5b.sch  dac_5b.sym  dac_6b.sch  dac_6b.sym  dac_8b.sym  testbench_buffer.sch  testbench_dac.sch  testbench_dac_extremes.sch
