[project]
name = "glasgowcontrib-applet-flash-dtr"
version = "0"

requires-python = "~=3.11"
dependencies = ["glasgow"]

[project.entry-points."glasgow.applet"]
flash-dtr = "glasgowcontrib.applet.flash_dtr:FlashDTRApplet"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["glasgowcontrib"]